# sts

./: .gitignore  CMakeLists.txt  Makefile  compile_commands.json  fixeslist  input.expression  input.sts  input2.sts  input3.sts  oldMakefile  outputfile.yaml  todolist
examples/: code.fan  example.sts  examplefanatlib.fan  exp.sts  fanat.sts  hardparse.sts  metasts.sts  supertoken.sts
specification/: Sts_description.md  example_log.json  example_log2.json  ru.txt  test.txt
src/: allocator.c  allocator.h  files.c  files.h  main.c  print.c  print.h  utils.h
src/_sts/: metablocks.c  metablocks.h  metablocks_d.h  source.h
src/_sts/metaparser/: metaparser.c  metaparser.h
src/collections/_deprecated/: arraylist.c  arraylist.h  map.c  map.h
src/collections/glist/: glist.c.h  glist.h
src/collections/glists/: constlist.c  constlist.h  intlist.c  intlist.h  list.c  (+8 more)
src/errors/: errors.c  errors.h
src/iter/: iter.c  iter.h  sources.h
src/logger/: logger.c  logger.h
src/memutils/: memtypes.h  refcount.h
src/printers/: print_impls.c  print_json_utils.h  print_utils.h  prints.c  prints.h
src/sources/: sources.c  sources.h
src/stringbuilder/: stringbuilder.c  stringbuilder.h
src/strings/: strings.c  strings.h  unicode.c  unicode.h
src/sts/: metablocks.c  metablocks.h  metadeclarationblocks.c  metadeclarationblocks.h  stss.c  stss.h
src/unicode/: unicode.c  unicode.h
tests/: test.c  test_unicode.c  tests.md
tests/collections1/: test_unicode.h
tests/tests/: test_allocator.c  test_allocator.h  test_strings.c  test_strings.h
tests/unity/: unity.h
(+112 files in other folders)
